Исправил ссылку для ВК Донут

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,1 +1,1 @@
-custom: ['pay.mysbertips.ru/02344378', 'pay.cloudtips.ru/p/ce0a5535', 'vk.com/donut/zaboal_name', 'yoomoney.ru/to/4100117899641111']
+custom: ['pay.mysbertips.ru/02344378', 'pay.cloudtips.ru/p/ce0a5535', 'vk.com/donut/zaboal_org', 'yoomoney.ru/to/4100117899641111']
