Добавил вывод текущией директории к воркфлоу

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -17,6 +17,9 @@ jobs:
       with:
         go-version: 1.19
 
+    - name: Вывод текущей директории
+      run: ls -a
+
     - name: Установка зависимостей
       run: go get source
 
